--- a/MemoryGame.html
+++ b/MemoryGame.html
@@ -156,7 +156,7 @@
         function change(e){
             n=parseInt(e.target.id);
             if(cards[n-1].flipped=="no"){
-                //first card flip (if there are no card flipped)
+                //first card flip (if there are no card flipped).
             if(flip==100){
                 document.getElementById(n).src="images/"+cards[n-1].cName+".jpg";
                 flip=n-1;
