--- a/index.html
+++ b/index.html
@@ -169,7 +169,8 @@
                 //second card flip(if there are one or more cards flipped)
                 document.getElementById(n).src="images/"+cards[n-1].cName+".jpg";
 
-                //timer for 2 cards to stay flipped for 400ms
+                //timer for 2 cards to stay flipped for 400ms 
+                //then check if the 2 cards have the same images
                 setTimeout(()=>{
 
                     //check if the 2 cards flipped have the same image
